--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,13 @@
 </head>
 <body>
 <div class='container'>
+  <div class='btn btn-default'>Create new</div>
   <div ui-view></div>
 </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
   <script src='js/app.js'></script>
+  <script src='js/factories/todo.js'></script>
   <script src='js/controllers/main.js'></script>
 </body>
 </html>
