--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en" ng-app='mean-boilerplate'>
+<html lang="en" ng-app='feathers-starter'>
 <head>
   <meta charset="utf-8">
 
-  <title>mean-boilerplate</title>
+  <title>Feathers.js Starter</title>
   <meta name="description" content="mean-boilerplate">
   <meta name="author" content="Connor Leech">
 
@@ -15,12 +15,18 @@
   <![endif]-->
 </head>
 <body>
-<div class='container'>
-  <div class='btn btn-default'>Create new</div>
-  <div ui-view></div>
-</div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+  <div class='container'>
+    <div class='btn btn-default'>Create new</div>
+    <div ui-view></div>
+  </div>
+
+  <!-- scripts -->
+  <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="bower_components/api-check/dist/api-check.min.js"></script>
+  <script src="bower_components/angular-formly/dist/formly.min.js"></script>
+  <script src="bower_components/angular-formly-templates-bootstrap/dist/angular-formly-templates-bootstrap.min.js"></script>
+
   <script src='js/app.js'></script>
   <script src='js/factories/todo.js'></script>
   <script src='js/controllers/main.js'></script>
